lib/bait/tests/inout_error/var_not_exists.out
lib/bait/tests/inout_error/var_not_exists.in.bt:3:14 error: undefined variable my_var_name
