lib/bait/tests/inout_error/var_not_exists.in.bt
fun my_var_name() {}

if my_var_name {
	my_var_name()
}
